--- a/All-Agents-Notebooks/conversational_agent.ipynb
+++ b/All-Agents-Notebooks/conversational_agent.ipynb
@@ -66,34 +66,26 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Import from installed packages \n",
-    "https://python.langchain.com/api_reference/reference.html"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#https://python.langchain.com/api_reference/openai/chat_models.html\n",
-    "from langchain_openai import ChatOpenAI\n",
+    "# Initialize a ChatModel in a single line using the model's name and provider.\n",
+    "from langchain.chat_models import init_chat_model\n",
     "\n",
-    "#RunnableWithMessageHistory wraps another Runnable and manages the chat message history for it;\n",
-    "#It is responsible for reading and updating the chat message history.\n",
-    "# https://python.langchain.com/api_reference/core/runnables/langchain_core.runnables.history.RunnableWithMessageHistory.html \n",
+    "# RunnableWithMessageHistory wraps another Runnable and manages the chat message history for it;\n",
+    "# It is responsible for reading and updating the chat message history.\n",
     "from langchain_core.runnables.history import RunnableWithMessageHistory\n",
     "\n",
-    "#Stores the chat message history in different stores.\n",
-    "# https://python.langchain.com/api_reference/langchain/memory.html\n",
+    "# Abstract base class for storing chat message history.\n",
+    "from langchain_core.chat_history import BaseChatMessageHistory\n",
+    "\n",
+    "# Stores the chat message history in different stores.\n",
     "from langchain.memory import ChatMessageHistory\n",
     "\n",
     "\n",
     "# create flexible templated prompts for chat models\n",
-    "# https://python.langchain.com/api_reference/core/prompts/langchain_core.prompts.chat.ChatPromptTemplate.html\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "\n",
     "# Prompt template that assumes variable is already list of messages.\n",
@@ -110,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +111,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,10 +119,18 @@
    "source": [
     "import os\n",
     "from dotenv import load_dotenv\n",
+    "\n",
+    "# Load environment variables\n",
     "load_dotenv(dotenv_path=\"../.env\", verbose=True)\n",
     "\n",
+    "# # Retrieve the key\n",
     "# openai_key = os.getenv('OPENAI_API_KEY')\n",
-    "# print(openai_key)\n"
+    "\n",
+    "# # Check if it exists\n",
+    "# if openai_key:\n",
+    "#     print(f\"API Key found: {openai_key}\")\n",
+    "# else:\n",
+    "#     print(\"API Key not found. Please check your .env file.\")"
    ]
   },
   {
@@ -163,18 +163,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Instantiate\n",
-    "llm = ChatOpenAI(\n",
-    "    model=\"gpt-4.1-nano\",\n",
-    "    max_tokens=1000, # Output cuttoff once output reaches 1000 tokens/request\n",
-    "    temperature=0, # Deterministic\n",
+    "#Instantiate\n",
+    "llm=init_chat_model(\n",
+    "    \"openai:gpt-4.1-nano\",\n",
+    "    temperature=0,\n",
+    "    max_tokens=1000,\n",
     "    timeout=None,\n",
-    "    max_retries=2\n",
-    "    )"
+    "    max_retries=2                  \n",
+    ")"
    ]
   },
   {
@@ -186,13 +186,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "store = {}\n",
+    "store:dict[str, BaseChatMessageHistory]={}\n",
     "\n",
-    "def get_chat_history(session_id: str)->dict:\n",
+    "def get_chat_history(session_id: str)->BaseChatMessageHistory:\n",
     "    \"\"\" Add ChatMessageHistory to the store \"\"\"\n",
     "    if session_id not in store:\n",
     "        store[session_id] = ChatMessageHistory()\n",
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "{}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
        " '_type': 'chat'}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -331,26 +331,26 @@
     "session_id = \"user_123\"\n",
     "\n",
     "\n",
-    "response1 = chain_with_history.invoke(\n",
+    "response = chain_with_history.invoke(\n",
     "    {\"input\": \"Hello! How are you?\"},\n",
     "    config={\"configurable\": {\"session_id\": session_id}}\n",
     ")\n",
-    "print(\"AI:\", response1.content)\n",
+    "print(\"AI:\", response.content)\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\riahl\\AppData\\Local\\Temp\\ipykernel_23376\\2987977564.py:1: PydanticDeprecatedSince20: The `dict` method is deprecated; use `model_dump` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.11/migration/\n",
-      "  response1.dict()\n"
+      "C:\\Users\\riahl\\AppData\\Local\\Temp\\ipykernel_14448\\3202056457.py:1: PydanticDeprecatedSince20: The `dict` method is deprecated; use `model_dump` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.11/migration/\n",
+      "  response.dict()\n"
      ]
     },
     {
@@ -368,13 +368,13 @@
        "   'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}},\n",
        "  'model_name': 'gpt-4.1-nano-2025-04-14',\n",
        "  'system_fingerprint': 'fp_7c233bf9d1',\n",
-       "  'id': 'chatcmpl-CFKKvkVtkEZ1CSjVLuF1evCsz9UTN',\n",
+       "  'id': 'chatcmpl-CG1wNNzAgnZuNE7epy0oh9bKptLRz',\n",
        "  'service_tier': 'default',\n",
        "  'finish_reason': 'stop',\n",
        "  'logprobs': None},\n",
        " 'type': 'ai',\n",
        " 'name': None,\n",
-       " 'id': 'run--512dedba-927c-453d-9b0f-5daffb196c15-0',\n",
+       " 'id': 'run--82cc6b94-9dae-4425-af2d-e7d25b566b2f-0',\n",
        " 'example': False,\n",
        " 'tool_calls': [],\n",
        " 'invalid_tool_calls': [],\n",
@@ -385,28 +385,28 @@
        "  'output_token_details': {'audio': 0, 'reasoning': 0}}}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "response1.dict()"
+    "response.dict()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[HumanMessage(content='Hello! How are you?', additional_kwargs={}, response_metadata={}),\n",
-       " AIMessage(content=\"Hello! I'm doing well, thank you. How can I assist you today?\", additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 16, 'prompt_tokens': 24, 'total_tokens': 40, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4.1-nano-2025-04-14', 'system_fingerprint': 'fp_7c233bf9d1', 'id': 'chatcmpl-CEznYlMTRrFkF42OEhGE92NVMk0nN', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='run--c232161d-e61b-4bd2-8850-32f0a541290c-0', usage_metadata={'input_tokens': 24, 'output_tokens': 16, 'total_tokens': 40, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})]"
+       " AIMessage(content=\"Hello! I'm doing well, thank you. How can I assist you today?\", additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 16, 'prompt_tokens': 24, 'total_tokens': 40, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4.1-nano-2025-04-14', 'system_fingerprint': 'fp_7c233bf9d1', 'id': 'chatcmpl-CG1wNNzAgnZuNE7epy0oh9bKptLRz', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='run--82cc6b94-9dae-4425-af2d-e7d25b566b2f-0', usage_metadata={'input_tokens': 24, 'output_tokens': 16, 'total_tokens': 40, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -453,19 +453,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[HumanMessage(content='Hello! How are you?', additional_kwargs={}, response_metadata={}),\n",
-       " AIMessage(content=\"Hello! I'm doing well, thank you. How can I assist you today?\", additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 16, 'prompt_tokens': 24, 'total_tokens': 40, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4.1-nano-2025-04-14', 'system_fingerprint': 'fp_7c233bf9d1', 'id': 'chatcmpl-CFKKvkVtkEZ1CSjVLuF1evCsz9UTN', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='run--512dedba-927c-453d-9b0f-5daffb196c15-0', usage_metadata={'input_tokens': 24, 'output_tokens': 16, 'total_tokens': 40, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}),\n",
+       " AIMessage(content=\"Hello! I'm doing well, thank you. How can I assist you today?\", additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 16, 'prompt_tokens': 24, 'total_tokens': 40, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4.1-nano-2025-04-14', 'system_fingerprint': 'fp_7c233bf9d1', 'id': 'chatcmpl-CG1wNNzAgnZuNE7epy0oh9bKptLRz', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='run--82cc6b94-9dae-4425-af2d-e7d25b566b2f-0', usage_metadata={'input_tokens': 24, 'output_tokens': 16, 'total_tokens': 40, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}),\n",
        " HumanMessage(content='What was my previous message?', additional_kwargs={}, response_metadata={}),\n",
-       " AIMessage(content='Your previous message was: \"Hello! How are you?\"', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 12, 'prompt_tokens': 54, 'total_tokens': 66, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4.1-nano-2025-04-14', 'system_fingerprint': 'fp_04d3664870', 'id': 'chatcmpl-CFKWLcWGQcWSNcTjvIxcFELaH3ynU', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='run--96f8410f-eaec-4898-8ba6-a2d1ec70de11-0', usage_metadata={'input_tokens': 54, 'output_tokens': 12, 'total_tokens': 66, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})]"
+       " AIMessage(content='Your previous message was: \"Hello! How are you?\"', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 12, 'prompt_tokens': 54, 'total_tokens': 66, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4.1-nano-2025-04-14', 'system_fingerprint': 'fp_04d3664870', 'id': 'chatcmpl-CG1wfNOBzXPMug4jx5fX9aeZngQDf', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='run--0805a005-f48a-4e5d-b5f8-6fdc71efc85e-0', usage_metadata={'input_tokens': 54, 'output_tokens': 12, 'total_tokens': 66, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -529,12 +529,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# https://python.langchain.com/api_reference/core/messages.html\n",
-    "from langchain_core.messages import HumanMessage , AIMessage ,SystemMessage"
+    "from langchain_core.messages import BaseMessage, HumanMessage , AIMessage ,SystemMessage\n",
+    "from langchain.chat_models import init_chat_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "# Load environment variables\n",
+    "load_dotenv(dotenv_path=\"../.env\", verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm=init_chat_model(\"openai:gpt-4.1-nano\", temperature=0)"
    ]
   },
   {
@@ -544,8 +577,8 @@
    "outputs": [],
    "source": [
     "# Initialize conversation\n",
-    "messages=[\n",
-    "    SystemMessage(\"You are a helpful AI assistant.\")\n",
+    "messages:list[BaseMessage]=[\n",
+    "SystemMessage(content=\"You are a helpful AI assistant.\")\n",
     "]"
    ]
   },
@@ -559,7 +592,7 @@
      "output_type": "stream",
      "text": [
       "Assistant:Hello! I'm doing well, thank you. How can I assist you today?\n",
-      "Assistant:Your previous message was: \"Hi How are you?\"\n"
+      "Assistant:Your previous message was: \"hi how are you\"\n"
      ]
     }
    ],
@@ -572,7 +605,7 @@
     "        break\n",
     "\n",
     "    # Add user message\n",
-    "    messages.append(HumanMessage(user_input))\n",
+    "    messages.append(HumanMessage(content=user_input))\n",
     "\n",
     "    #Get model response\n",
     "    response=llm.invoke(messages)\n",
