--- a/All-Agents-Notebooks/data_analysis_agent_notebook.ipynb
+++ b/All-Agents-Notebooks/data_analysis_agent_notebook.ipynb
@@ -46,13 +46,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# https://python.langchain.com/api_reference/experimental/agents/langchain_experimental.agents.agent_toolkits.pandas.base.create_pandas_dataframe_agent.html#langchain_experimental.agents.agent_toolkits.pandas.base.create_pandas_dataframe_agent\n",
     "from langchain_experimental.agents import create_pandas_dataframe_agent\n",
-    "\n",
-    "#https://python.langchain.com/api_reference/langchain/agents/langchain.agents.agent_types.AgentType.html\n",
     "from langchain.agents.agent_types import AgentType\n",
-    "\n",
-    "from langchain_openai import ChatOpenAI\n",
+    "from langchain.chat_models import init_chat_model\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from datetime import datetime, timedelta"
@@ -75,12 +71,20 @@
     }
    ],
    "source": [
-    "# Load environment variables\n",
+    "import os\n",
     "from dotenv import load_dotenv\n",
+    "\n",
+    "# Load environment variables\n",
     "load_dotenv(dotenv_path=\"../.env\", verbose=True)\n",
     "\n",
+    "# # Retrieve the key\n",
     "# openai_key = os.getenv('OPENAI_API_KEY')\n",
-    "# print(openai_key)\n"
+    "\n",
+    "# # Check if it exists\n",
+    "# if openai_key:\n",
+    "#     print(f\"API Key found: {openai_key}\")\n",
+    "# else:\n",
+    "#     print(\"API Key not found. Please check your .env file.\")\n"
    ]
   },
   {
@@ -192,16 +196,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "llm=ChatOpenAI(model='gpt-5-nano', temperature=0)"
+    "llm=init_chat_model('openai:gpt-5-nano', temperature=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -279,15 +283,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Question: how many rows are these in the data frame\n",
-      "Anwer: 1000 rows.\n",
+      "Question: how many rows are these in the data frame?\n",
+      "Anwer: There are 1000 rows in the dataframe.\n",
       "---\n"
      ]
     }
@@ -298,25 +302,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Question: display the price of car BMW and SUV model with the color green with years\n",
-      "Anwer: Here are the BMW SUV Green cars with their years and prices:\n",
-      "- 2018 — $47,903.31\n",
-      "- 2018 — $32,206.19\n",
-      "- 2020 — $60,158.52\n",
+      "Question: display the price of car (Make is BMW and Model is SUV) with the color green with years\n",
+      "Anwer: Matching BMW SUV cars with green color:\n",
+      "\n",
+      "- Year 2018: Price 47903.31\n",
+      "- Year 2018: Price 32206.19\n",
+      "- Year 2020: Price 60158.52\n",
       "---\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "ask_agent(\"display the price of car BMW and SUV model with the color green with years\")"
+    "ask_agent(\"display the price of car (Make is BMW and Model is SUV) with the color green with years\")"
    ]
   },
   {
