--- a/All-Agents-Notebooks/question_answering_agent.ipynb
+++ b/All-Agents-Notebooks/question_answering_agent.ipynb
@@ -67,15 +67,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "from dotenv import load_dotenv\n",
-    "from langchain_openai import ChatOpenAI\n",
-    "from langchain.prompts import PromptTemplate\n"
+    "from langchain.chat_models import init_chat_model\n",
+    "from langchain_core.prompts import PromptTemplate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -90,10 +88,20 @@
     }
    ],
    "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "# Load environment variables\n",
     "load_dotenv(dotenv_path=\"../.env\", verbose=True)\n",
     "\n",
+    "# # Retrieve the key\n",
     "# openai_key = os.getenv('OPENAI_API_KEY')\n",
-    "# print(openai_key)"
+    "\n",
+    "# # Check if it exists\n",
+    "# if openai_key:\n",
+    "#     print(f\"API Key found: {openai_key}\")\n",
+    "# else:\n",
+    "#     print(\"API Key not found. Please check your .env file.\")"
    ]
   },
   {
@@ -105,12 +113,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Instantiate\n",
-    "llm = ChatOpenAI(\n",
+    "llm = init_chat_model(\n",
     "    model=\"gpt-4.1-nano\",\n",
     "    max_tokens=1000, # Output cuttoff once output reaches 1000 tokens/request\n",
     "    temperature=0, # Deterministic\n",
@@ -232,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -286,13 +294,13 @@
      "output_type": "stream",
      "text": [
       "Answer: The capital of France is Paris.\n",
-      "Answer: Your previous message was: \"what is capital of france\"\n"
+      "Answer: Your previous message was: \"what is the capital of France\"\n"
      ]
     }
    ],
    "source": [
     "from dotenv import load_dotenv\n",
-    "from langchain_openai import ChatOpenAI\n",
+    "from langchain.chat_models import init_chat_model\n",
     "from langchain.prompts import PromptTemplate\n",
     "from langchain_core.runnables.history import RunnableWithMessageHistory\n",
     "from langchain.memory import ChatMessageHistory\n",
@@ -301,7 +309,7 @@
     "load_dotenv(dotenv_path=\"../.env\", verbose=True)\n",
     "\n",
     "# 1. Create the base LLM\n",
-    "llm = ChatOpenAI(\n",
+    "llm = init_chat_model(\n",
     "    model=\"gpt-4.1-nano\",\n",
     "    max_tokens=1000,\n",
     "    temperature=0,\n",
@@ -472,9 +480,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "vagenticenv",
    "language": "python",
-   "name": "python3"
+   "name": ".venv"
   },
   "language_info": {
    "codemirror_mode": {
